Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29654

Autotest crashes when closing the project while "Scanning for tests..."

    XMLWordPrintable

Details

    • Linux/X11
    • 3e0f7773b (12.0)

    Description

      To reproduce:
      1. Open a session containing the QtCreator project.
      2. Wait until "Scanning for Tests" task is started.
      3. Close the project during "Scanning for Tests" (context menu over project name inside the project explorer - Close Project "Creator") - crash.

      Call stack:

      Thread 1 (Thread 0x7f03d86338c0 (LWP 79794)):
      #0  0x00007f0361c2ca62 in QHash<QString, Autotest::Internal::ItemDataCache<Qt::CheckState>::Entry>::isEmpty (this=0x0) at /home/jarek/dev/qt-65/qtbase/src/corelib/tools/qhash.h:938
      #1  0x00007f0361c2a006 in QHash<QString, Autotest::Internal::ItemDataCache<Qt::CheckState>::Entry>::find (this=0x0, key=...) at /home/jarek/dev/qt-65/qtbase/src/corelib/tools/qhash.h:1272
      #2  0x00007f0361c27d8e in Autotest::Internal::ItemDataCache<Qt::CheckState>::get (this=0x0, item=0x55f6e3e175e0) at /home/jarek/dev/creator-12/src/plugins/autotest/itemdatacache.h:40
      #3  0x00007f0361c1d439 in Autotest::TestTreeModel::insertItemInParent (this=0x55f6e1558960, item=0x55f6e3e175e0, root=0x55f6e1b18160, groupingEnabled=false) at /home/jarek/dev/creator-12/src/plugins/autotest/testtreemodel.cpp:614
      #4  0x00007f0361c1bd13 in Autotest::TestTreeModel::filterAndInsert (this=0x55f6e1558960, item=0x55f6e3e175e0, root=0x55f6e1b18160, groupingEnabled=false) at /home/jarek/dev/creator-12/src/plugins/autotest/testtreemodel.cpp:403
      #5  0x00007f0361c1e17b in Autotest::TestTreeModel::handleParseResult (this=0x55f6e1558960, result=0x7f00646d9010, parentNode=0x55f6e1b18160) at /home/jarek/dev/creator-12/src/plugins/autotest/testtreemodel.cpp:747
      #6  0x00007f0361c1db48 in Autotest::TestTreeModel::onParseResultReady (this=0x55f6e1558960, result=...) at /home/jarek/dev/creator-12/src/plugins/autotest/testtreemodel.cpp:687
      #7  0x00007f0361c30504 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QSharedPointer<Autotest::TestParseResult> >, void, void (Autotest::TestTreeModel::*)(QSharedPointer<Autotest::TestParseResult>)>::call (f=(void (Autotest::TestTreeModel::*)(Autotest::TestTreeModel * const, QSharedPointer<Autotest::TestParseResult>)) 0x7f0361c1daac <Autotest::TestTreeModel::onParseResultReady(QSharedPointer<Autotest::TestParseResult>)>, o=0x55f6e1558960, arg=0x7fff07b69990) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:137
      #8  0x00007f0361c2e0d7 in QtPrivate::FunctionPointer<void (Autotest::TestTreeModel::*)(QSharedPointer<Autotest::TestParseResult>)>::call<QtPrivate::List<QSharedPointer<Autotest::TestParseResult> >, void> (f=(void (Autotest::TestTreeModel::*)(Autotest::TestTreeModel * const, QSharedPointer<Autotest::TestParseResult>)) 0x7f0361c1daac <Autotest::TestTreeModel::onParseResultReady(QSharedPointer<Autotest::TestParseResult>)>, o=0x55f6e1558960, arg=0x7fff07b69990) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:174
      #9  0x00007f0361c2bb8f in QtPrivate::QSlotObject<void (Autotest::TestTreeModel::*)(QSharedPointer<Autotest::TestParseResult>), QtPrivate::List<QSharedPointer<Autotest::TestParseResult> >, void>::impl (which=1, this_=0x55f6e1c52b50, r=0x55f6e1558960, a=0x7fff07b69990, ret=0x0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398
      #10 0x00007f03d8d9dbb7 in QtPrivate::QSlotObjectBase::call (this=0x55f6e1c52b50, r=0x55f6e1558960, a=0x7fff07b69990) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:374
      #11 0x00007f03d8e1611a in doActivate<false> (sender=0x55f6e15588c0, signal_index=4, argv=0x7fff07b69990) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:4017
      #12 0x00007f03d8e0bff5 in QMetaObject::activate (sender=0x55f6e15588c0, m=0x7f0361d6ca60 <Autotest::Internal::TestCodeParser::staticMetaObject>, local_signal_index=1, argv=0x7fff07b69990) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:4077
      #13 0x00007f0361a545bc in Autotest::Internal::TestCodeParser::testParseResultReady (this=0x55f6e15588c0, _t1=...) at /home/jarek/dev/creator-12-build-65/src/plugins/autotest/AutoTest_autogen/EWIEGA46WW/moc_testcodeparser.cpp:293
      #14 0x00007f0361b8126e in operator() (__closure=0x55f6ea032590, async=...) at /home/jarek/dev/creator-12/src/plugins/autotest/testcodeparser.cpp:388
      #15 0x00007f0361b85b31 in std::__invoke_impl<void, Autotest::Internal::TestCodeParser::scanForTests(const QSet<Utils::FilePath>&, const QList<Autotest::ITestParser*>&)::<lambda(const Utils::Async<QSharedPointer<Autotest::TestParseResult> >&)>&, const Utils::Async<QSharedPointer<Autotest::TestParseResult> >&>(std::__invoke_other, struct {...} &) (__f=...) at /usr/include/c++/11/bits/invoke.h:61
      #16 0x00007f0361b854ad in std::__invoke_r<void, Autotest::Internal::TestCodeParser::scanForTests(const QSet<Utils::FilePath>&, const QList<Autotest::ITestParser*>&)::<lambda(const Utils::Async<QSharedPointer<Autotest::TestParseResult> >&)>&, const Utils::Async<QSharedPointer<Autotest::TestParseResult> >&>(struct {...} &) (__fn=...) at /usr/include/c++/11/bits/invoke.h:111
      #17 0x00007f0361b84f10 in std::_Function_handler<void(const Utils::Async<QSharedPointer<Autotest::TestParseResult> >&), Autotest::Internal::TestCodeParser::scanForTests(const QSet<Utils::FilePath>&, const QList<Autotest::ITestParser*>&)::<lambda(const Utils::Async<QSharedPointer<Autotest::TestParseResult> >&)> >::_M_invoke(const std::_Any_data &, const Utils::Async<QSharedPointer<Autotest::TestParseResult> > &) (__functor=..., __args#0=...) at /usr/include/c++/11/bits/std_function.h:290
      #18 0x00007f0361b8f547 in std::function<void (Utils::Async<QSharedPointer<Autotest::TestParseResult> > const&)>::operator()(Utils::Async<QSharedPointer<Autotest::TestParseResult> > const&) const (this=0x55f6ea032590, __args#0=...) at /usr/include/c++/11/bits/std_function.h:590
      #19 0x00007f0361b8cea2 in Tasking::CustomTask<Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> > >::wrapEnd(std::function<void (Utils::Async<QSharedPointer<Autotest::TestParseResult> > const&)> const&)::{lambda(Tasking::TaskInterface const&)#1}::operator()(Tasking::TaskInterface const&) const (__closure=0x55f6ea032590, taskInterface=...) at /home/jarek/dev/creator-12/src/libs/solutions/tasking/tasktree.h:378
      #20 0x00007f0361b960c1 in std::__invoke_impl<void, Tasking::CustomTask<Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> > >::wrapEnd(std::function<void (Utils::Async<QSharedPointer<Autotest::TestParseResult> > const&)> const&)::{lambda(Tasking::TaskInterface const&)#1}&, Tasking::TaskInterface const&>(std::__invoke_other, Tasking::CustomTask<Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> > >::wrapEnd(std::function<void (Utils::Async<QSharedPointer<Autotest::TestParseResult> > const&)> const&)::{lambda(Tasking::TaskInterface const&)#1}&, Tasking::TaskInterface const&) (__f=...) at /usr/include/c++/11/bits/invoke.h:61
      #21 0x00007f0361b93b39 in std::__invoke_r<void, Tasking::CustomTask<Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> > >::wrapEnd(std::function<void (Utils::Async<QSharedPointer<Autotest::TestParseResult> > const&)> const&)::{lambda(Tasking::TaskInterface const&)#1}&, Tasking::TaskInterface const&>(Tasking::CustomTask<Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> > >::wrapEnd(std::function<void (Utils::Async<QSharedPointer<Autotest::TestParseResult> > const&)> const&)::{lambda(Tasking::TaskInterface const&)#1}&, Tasking::TaskInterface const&) (__fn=...) at /usr/include/c++/11/bits/invoke.h:111
      #22 0x00007f0361b916bf in std::_Function_handler<void (Tasking::TaskInterface const&), Tasking::CustomTask<Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> > >::wrapEnd(std::function<void (Utils::Async<QSharedPointer<Autotest::TestParseResult> > const&)> const&)::{lambda(Tasking::TaskInterface const&)#1}>::_M_invoke(std::_Any_data const&, Tasking::TaskInterface const&) (__functor=..., __args#0=...) at /usr/include/c++/11/bits/std_function.h:290
      #23 0x00007f03db73041f in std::function<void (Tasking::TaskInterface const&)>::operator()(Tasking::TaskInterface const&) const (this=0x55f6ea032400, __args#0=...) at /usr/include/c++/11/bits/std_function.h:590
      #24 0x00007f03db72bbfc in std::__invoke_impl<void, std::function<void (Tasking::TaskInterface const&)> const&, Tasking::TaskInterface&>(std::__invoke_other, std::function<void (Tasking::TaskInterface const&)> const&, Tasking::TaskInterface&) (__f=...) at /usr/include/c++/11/bits/invoke.h:61
      #25 0x00007f03db7271ba in std::__invoke<std::function<void (Tasking::TaskInterface const&)> const&, Tasking::TaskInterface&>(std::function<void (Tasking::TaskInterface const&)> const&, Tasking::TaskInterface&) (__fn=...) at /usr/include/c++/11/bits/invoke.h:96
      #26 0x00007f03db722dcc in std::invoke<std::function<void (Tasking::TaskInterface const&)> const&, Tasking::TaskInterface&>(std::function<void (Tasking::TaskInterface const&)> const&, Tasking::TaskInterface&) (__fn=...) at /usr/include/c++/11/functional:97
      #27 0x00007f03db71eac9 in Tasking::invokeHandler<std::function<void (Tasking::TaskInterface const&)> const&, Tasking::TaskInterface&, void>(Tasking::TaskContainer*, std::function<void (Tasking::TaskInterface const&)> const&, Tasking::TaskInterface&) (container=0x55f6e966eef0, handler=...) at /home/jarek/dev/creator-12/src/libs/solutions/tasking/tasktree.cpp:1297
      #28 0x00007f03db7143ff in Tasking::TaskNode::invokeEndHandler (this=0x55f6ea0323c0, success=true) at /home/jarek/dev/creator-12/src/libs/solutions/tasking/tasktree.cpp:1570
      #29 0x00007f03db713e70 in operator() (__closure=0x55f6e9880d50, success=true) at /home/jarek/dev/creator-12/src/libs/solutions/tasking/tasktree.cpp:1535
      #30 0x00007f03db718182 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, Tasking::TaskNode::start()::<lambda(bool)> >::call(struct {...} &, void **) (f=..., arg=0x7fff07b69fc0) at /home/jarek/dev/qt-65-build/qtbase/include/QtCore/../../../../qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:129
      #31 0x00007f03db717c5b in QtPrivate::Functor<Tasking::TaskNode::start()::<lambda(bool)>, 1>::call<QtPrivate::List<bool>, void>(struct {...} &, void *, void **) (f=..., arg=0x7fff07b69fc0) at /home/jarek/dev/qt-65-build/qtbase/include/QtCore/../../../../qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:243
      #32 0x00007f03db717508 in QtPrivate::QFunctorSlotObject<Tasking::TaskNode::start()::<lambda(bool)>, 1, QtPrivate::List<bool>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x55f6e9880d40, r=0x7f03c401a830, a=0x7fff07b69fc0, ret=0x0) at /home/jarek/dev/qt-65-build/qtbase/include/QtCore/../../../../qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:423
      #33 0x00007f03d8d9dbb7 in QtPrivate::QSlotObjectBase::call (this=0x55f6e9880d40, r=0x7f03c401a830, a=0x7fff07b69fc0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:374
      #34 0x00007f03d8e1611a in doActivate<false> (sender=0x55f6e9887280, signal_index=3, argv=0x7fff07b69fc0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:4017
      #35 0x00007f03d8e0bff5 in QMetaObject::activate (sender=0x55f6e9887280, m=0x7f03dbe20ee0 <Tasking::TaskInterface::staticMetaObject>, local_signal_index=0, argv=0x7fff07b69fc0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:4077
      #36 0x00007f03db70ebdb in Tasking::TaskInterface::done (this=0x55f6e9887280, _t1=true) at /home/jarek/dev/creator-12-build-65/src/libs/solutions/tasking/Tasking_autogen/EWIEGA46WW/moc_tasktree.cpp:166
      #37 0x00007f0361b8f3cc in Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> >::AsyncTaskAdapter()::{lambda()#1}::operator()() const (__closure=0x55f6e467f5c0) at /home/jarek/dev/creator-12/src/libs/utils/async.h:207
      #38 0x00007f0361b9a605 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> >::AsyncTaskAdapter()::{lambda()#1}>::call(Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> >::AsyncTaskAdapter()::{lambda()#1}&, void**) (f=..., arg=0x7fff07b6a1c8) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:129
      #39 0x00007f0361b982bb in QtPrivate::Functor<Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> >::AsyncTaskAdapter()::{lambda()#1}, 0>::call<QtPrivate::List<>, void>(Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> >::AsyncTaskAdapter()::{lambda()#1}&, void*, void**) (f=..., arg=0x7fff07b6a1c8) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:243
      #40 0x00007f0361b9604c in QtPrivate::QFunctorSlotObject<Utils::AsyncTaskAdapter<QSharedPointer<Autotest::TestParseResult> >::AsyncTaskAdapter()::{lambda()#1}, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x55f6e467f5b0, r=0x55f6e9887280, a=0x7fff07b6a1c8, ret=0x0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:423
      #41 0x00007f03d8d9dbb7 in QtPrivate::QSlotObjectBase::call (this=0x55f6e467f5b0, r=0x55f6e9887280, a=0x7fff07b6a1c8) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:374
      #42 0x00007f03d8e1611a in doActivate<false> (sender=0x55f6e9887290, signal_index=4, argv=0x7fff07b6a1c8) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:4017
      #43 0x00007f03d8e0bff5 in QMetaObject::activate (sender=0x55f6e9887290, m=0x7f03dbe22040 <Utils::AsyncBase::staticMetaObject>, local_signal_index=1, argv=0x0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:4077
      #44 0x00007f03db7433e7 in Utils::AsyncBase::done (this=0x55f6e9887290) at /home/jarek/dev/creator-12-build-65/src/libs/utils/Utils_autogen/EWIEGA46WW/moc_async.cpp:203
      #45 0x00007f0361b9c386 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Utils::AsyncBase::*)()>::call(void (Utils::AsyncBase::*)(), Utils::AsyncBase*, void**) (f=(void (Utils::AsyncBase::*)(Utils::AsyncBase * const)) 0x7f03db7433ba <Utils::AsyncBase::done()>, o=0x55f6e9887290, arg=0x7fff07b6a418) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:137
      #46 0x00007f0361b9a58a in QtPrivate::FunctionPointer<void (Utils::AsyncBase::*)()>::call<QtPrivate::List<>, void>(void (Utils::AsyncBase::*)(), Utils::AsyncBase*, void**) (f=(void (Utils::AsyncBase::*)(Utils::AsyncBase * const)) 0x7f03db7433ba <Utils::AsyncBase::done()>, o=0x55f6e9887290, arg=0x7fff07b6a418) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:174
      #47 0x00007f0361b98147 in QtPrivate::QSlotObject<void (Utils::AsyncBase::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x55f6e46edd00, r=0x55f6e9887290, a=0x7fff07b6a418, ret=0x0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398
      #48 0x00007f03d8d9dbb7 in QtPrivate::QSlotObjectBase::call (this=0x55f6e46edd00, r=0x55f6e9887290, a=0x7fff07b6a418) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobjectdefs_impl.h:374
      #49 0x00007f03d8e1611a in doActivate<false> (sender=0x55f6e98872d8, signal_index=4, argv=0x7fff07b6a418) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:4017
      #50 0x00007f03d8e0bff5 in QMetaObject::activate (sender=0x55f6e98872d8, m=0x7f03d9557440 <QFutureWatcherBase::staticMetaObject>, local_signal_index=1, argv=0x0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:4077
      #51 0x00007f03d904e7df in QFutureWatcherBase::finished (this=0x55f6e98872d8) at /home/jarek/dev/qt-65-build/qtbase/src/corelib/Core_autogen/include/moc_qfuturewatcher.cpp:455
      #52 0x00007f03d904dc8c in QFutureWatcherBasePrivate::sendCallOutEvent (this=0x55f6e9880050, event=0x7f00640047c0) at /home/jarek/dev/qt-65/qtbase/src/corelib/thread/qfuturewatcher.cpp:493
      #53 0x00007f03d904d611 in QFutureWatcherBase::event (this=0x55f6e98872d8, event=0x7f00640047c0) at /home/jarek/dev/qt-65/qtbase/src/corelib/thread/qfuturewatcher.cpp:392
      #54 0x00007f03daba8cfa in QApplicationPrivate::notify_helper (this=0x55f6e1028600, receiver=0x55f6e98872d8, e=0x7f00640047c0) at /home/jarek/dev/qt-65/qtbase/src/widgets/kernel/qapplication.cpp:3287
      #55 0x00007f03daba8aec in QApplication::notify (this=0x55f6e1045610, receiver=0x55f6e98872d8, e=0x7f00640047c0) at /home/jarek/dev/qt-65/qtbase/src/widgets/kernel/qapplication.cpp:3238
      #56 0x00007f03d8d7a405 in QCoreApplication::notifyInternal2 (receiver=0x55f6e98872d8, event=0x7f00640047c0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qcoreapplication.cpp:1118
      #57 0x00007f03d8d7afa7 in QCoreApplication::sendEvent (receiver=0x55f6e98872d8, event=0x7f00640047c0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qcoreapplication.cpp:1536
      #58 0x00007f03d8d7befe in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55f6e1030960) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qcoreapplication.cpp:1898
      #59 0x00007f03d8d7b7cc in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qcoreapplication.cpp:1757
      #60 0x00007f03d91c90fc in postEventSourceDispatch (s=0x55f6e10b6370) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:243
      #61 0x00007f03d831bd3b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #62 0x00007f03d8371258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #63 0x00007f03d83193e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #64 0x00007f03d91c99be in QEventDispatcherGlib::processEvents (this=0x55f6e10ae8d0, flags=...) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:393
      #65 0x00007f03d4f10f3e in QXcbGlibEventDispatcher::processEvents (this=0x55f6e10ae8d0, flags=...) at /home/jarek/dev/qt-65/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:96
      #66 0x00007f03d8d8e98d in QEventLoop::processEvents (this=0x7fff07b6abe0, flags=...) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qeventloop.cpp:100
      #67 0x00007f03d8d8ecfc in QEventLoop::exec (this=0x7fff07b6abe0, flags=...) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qeventloop.cpp:182
      #68 0x00007f03d8d7ad70 in QCoreApplication::exec () at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qcoreapplication.cpp:1439
      #69 0x00007f03d9be5c82 in QGuiApplication::exec () at /home/jarek/dev/qt-65/qtbase/src/gui/kernel/qguiapplication.cpp:1909
      #70 0x00007f03daba5ce7 in QApplication::exec () at /home/jarek/dev/qt-65/qtbase/src/widgets/kernel/qapplication.cpp:2566
      #71 0x000055f6df2914da in main (argc=1, argv=0x7fff07b6b338) at /home/jarek/dev/creator-12/src/app/main.cpp:830
      

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-29654
        # Subject Branch Project Status CR V

        Activity

          People

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes