Autotest: Ensure m_checkStateCache isn't nullptr

Fixes: QTCREATORBUG-29654
Change-Id: Ia1864756a232663c4109fdae61de1dcaf1fbcd14
Reviewed-by: Christian Stenger <christian.stenger@qt.io>